# openview

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  watcher.rs
src-tauri/src/commands/: csv_cmd.rs  file.rs  git.rs  markdown.rs  mod.rs  sqlite_cmd.rs
src/components/CodeViewer/: CodeViewer.css  CodeViewer.tsx
src/components/CsvViewer/: CsvViewer.css  CsvViewer.tsx
src/components/GitDiff/: GitDiff.css  GitDiff.tsx
src/components/GitLog/: GitLog.css  GitLog.tsx  graph.test.ts  graph.ts
src/components/JsonViewer/: JsonViewer.css  JsonViewer.tsx
src/components/MarkdownPreview/: MarkdownPreview.css  MarkdownPreview.tsx
src/components/MermaidViewer/: MermaidViewer.css  MermaidViewer.tsx
src/components/Sidebar/: FileIcons.tsx  Sidebar.css  Sidebar.tsx
src/components/SqliteViewer/: SqliteViewer.css  SqliteViewer.tsx
src/components/TabBar/: TabBar.css  TabBar.tsx
src/stores/: app.test.ts  app.ts
src/styles/: global.css
test-samples/: example.conf  example.py  example.sh  sample.csv  sample.db  sample.json  sample.md
